--- a/RM/src/App.css
+++ b/RM/src/App.css
@@ -1,7 +1,16 @@
+.container{
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  word-wrap: break-word;
+
+}
+
 .header{
 background-color: #282c34;
 color: white;
 text-align: center;
+background-position: center;
+box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
 }
 
 .imgs{
@@ -31,36 +40,51 @@ animation: heart-pulse 10s infinite ease-out;
   top: 100px;
 }
 
-.charContainer{
-  background-color: #e5e5e5;
-}
 
-#listChars{
+
+.listChars{
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
 }
 
 .charCard{
-  height: 600px;
-  width: 280px;
+  height: 300px;
+  width: 300px;
   background-color: whitesmoke;
   border-radius: 10px;
   box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
-  margin: 10px;
-  display: flex;
-  justify-content: center;
-  
+  margin: 50px;
+  transition-duration: 1s;
 }
 
 .profilepics{
 border-radius: 10px;
-height: 300px;
-width: 300px;
+height: 330px;
+width: 330px;
 box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+transition-duration: 1s;
 }
 
+.profilepics:hover { transform: scale(1.1); }
 
 .photoDiv{
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  height: 600px;
+  justify-content: center;
+  align-items: center;
 }
+
+.charCard2{
+  height: 600px;
+  width: 300px;
+  background-color: whitesmoke;
+  border-radius: 10px;
+  box-shadow: 0 1px 2px 0 rgb(60 64 67 / 30%), 0 2px 6px 2px rgb(60 64 67 / 15%);
+  margin: 50px;
+  transition-duration: 1s;
+}
+
